# HLX_research_language

./: .gitignore  ANNOUNCEMENT.md  ARCHITECTURAL_DECISIONS_FINAL.md  ARCHITECTURE_QUICK_REF.md  BF_MALBOLGE_BENCHMARK.md  BIOFORGE_PLAN.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTRACT_CATALOGUE.json  CONTRACT_SPEC_TEMPLATE.md  CONTRIBUTING.md  Cargo.toml  DEBT_LEDGER.md  DIFFERENTIAL_DEBUGGING_CASE_STUDY.md  DeepSeeks_reaction_m-0.md  FEATURES.md  FUNCTION_CALLS_IMPLEMENTED.md  FUNCTION_CALL_IMPLEMENTATION.md  GLMs_reaction_m-0.md  HLX_AUDIT_GUIDE.md  HLX_DEVELOPMENT_PLAN.md  HLX_LANGUAGE_SPEC.md  HLX_LIVING_LANGUAGE_PLAN.md  HLX_PASS3_DEBT_LEDGER.md  HLX_SOLIDIFIED.md  HLX_STRATEGIC_VISION.md  INFRASTRUCTURE_COMPLETION_FINAL.md  INFRASTRUCTURE_IMPLEMENTATION_STATUS.md  KERNEL_SUPPORT_ASSESSMENT.md  LICENSE  NATIVE_RUNTIME_IMPLEMENTATION_PLAN.md  NEXT_SESSION_QUICKSTART.md  PHASE2_HANDLE_OPERATIONS.md  PHASE2_PREREQUISITES.md  PHASE2_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_RUNTIME_PROGRESS.md  PHASE5_AXIOM_ENFORCEMENT.md  PHASE6_KERNEL_BOOT_INTEGRATION.md  QUICK_START_NEXT_SESSION.md  (+26 more)
_archive/v1.0_ouroboros_complete/: Cargo.toml  hlx_test_file.txt  stage1.lcc  stage1_dump.txt  stage3.lcb  stage3.lcc
ape/: Cargo.toml
ape/examples/: dsf_violations.axm  embed_execute.rs  embed_verify.rs  hello.axm  redteam_attack_suite.rs  redteam_verification_example.rs
ape/src/: engine.rs  error.rs  ffi.rs  lib.rs  main.rs  policy.rs  pymod.rs  verification.rs
axiom-hlx-stdlib/: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY_TESTING.md  axiom.h
axiom-hlx-stdlib/archive/: AXIOM_CORE_SPEC.md  AXIOM_LANG_v2.4.md  GITHUB_PUSH_CHECKLIST.md  HLX_TECHNICAL_SPECIFICATION.md
axiom-hlx-stdlib/axiom rocq proofs/: .AxiomTypes.aux  .AxiomVerify.aux  .G1_Purity.aux  .G2_EffectClass.aux  .G3_Determinism.aux  .G4_MonotonicRatchet.aux  .G5_SpecificDenial.aux  .G6_Totality.aux  .Makefile.d  AxiomTypes.glob  AxiomTypes.v  AxiomTypes.vo  AxiomVerify.glob  AxiomVerify.v  AxiomVerify.vo  G1_Purity.glob  G1_Purity.v  G1_Purity.vo  G2_EffectClass.glob  G2_EffectClass.v  G2_EffectClass.vo  G3_Determinism.glob  G3_Determinism.v  G3_Determinism.vo  G4_MonotonicRatchet.glob  G4_MonotonicRatchet.v  G4_MonotonicRatchet.vo  G5_SpecificDenial.glob  G5_SpecificDenial.v  G5_SpecificDenial.vo  G6_Totality.glob  G6_Totality.v  G6_Totality.vo  Makefile.conf  _CoqProject
axiom-hlx-stdlib/axiom_py/: Cargo.toml  README.md  pyproject.toml  test_adversarial.py  test_async.py  test_bindings.py  test_redteam.py
axiom-hlx-stdlib/examples/: axiom.project  embed_execute.rs  embed_verify.rs  full_demo.axm  redteam_attack_suite.rs  redteam_verification_example.rs
axiom-hlx-stdlib/src/: engine.rs  ffi.rs  lib.rs
axiom-hlx-stdlib/stdlib/: agents.axm  conscience.axm  io.axm  tensor.axm
axiom-hlx-stdlib/tests/: integration_tests.rs
backends/vulkan/: Cargo.toml  mod.rs
hlx/: .dockerignore  .env.example  .gitignore  ADVANCED_LSP_FEATURES.md  AI_FIRST_LSP.md  BARE_METAL_SUPPORT.md  BENCHMARKS.md  BOOTSTRAP_RECURSION_PHASE8_COMPLETE.md  BOUNDED_RECURSION_ROBUSTNESS.md  BUILD_SUMMARY.md  BUILTIN_CONVERSION_PLAN.md  Cargo.toml  DEBUGGING_REG_TYPE_MISSING.md  DELIVERABLES_2026-01-16.md  DIFFERENTIAL_DEBUGGING_PAPER.md  DOCKER.md  Dockerfile  FFI_COMPLETE.md  GPU_SHADER_LIBRARY.md  GPU_STDLIB_PHASE1.md  HLX-SCALE-QUICKSTART.md  HLX-SCALE.md  HLX_SCALE_PHASE1.md  HLX_SCALE_PHASE1A_COMPLETE.md  KNOWN_ISSUES.md  LSP_AUDIT_2026_01_08.md  LSP_CONTRACT_INTEGRATION.md  LSP_SECURITY_AUDIT_AND_TESTING.md  LSP_STATUS.txt  LSP_TEST_RESULTS.md  MODULE_SYSTEM_DESIGN.md  PERFORMANCE_GUIDE.md  PHASE4_IMAGE_PROCESSING.md  PHASE5_PARSING_FILE_IO.md  PROJECT_AUDIT_2026_01_08.md  PYTHON_FFI.md  QUICK_START.md  RUST_FFI.md  SELF_HOSTING_STATUS.md  SEMANTIC_ANALYSIS_DESIGN.md  (+89 more)
hlx-bond/: Cargo.toml
hlx-bond/src/: main.rs
hlx-ffi/: Cargo.toml
hlx-ffi/include/: hlx.h
hlx-ffi/python/: hlx_ffi.py
hlx-ffi/src/: lib.rs
hlx-ffi/tests/: smoke.rs
hlx-lsp/: Cargo.toml
hlx-lsp/src/: analysis.rs  backend.rs  main.rs
hlx-run/: Cargo.toml
hlx-run/src/: main.rs
hlx-run/tests/: integration.rs
hlx-runtime/: Cargo.toml
hlx-runtime/examples/: agent_demo.rs  debug_fib.rs  debug_loop.rs  demo.rs  full_demo.rs  governance_demo.rs  rsi_demo.rs  scale_demo.rs  tensor_demo.rs
hlx-runtime/src/: agent.rs  ast_parser.rs  bond.rs  builtins.rs  bytecode.rs  communication.rs  compiler.rs  dd_protocol.rs  debugger.rs  forgetting_guard.rs  governance.rs  gpu_dispatch.rs  hil_bridge.rs  homeostasis.rs  human_auth.rs  integrity.rs  lib.rs  lora_adapter.rs  lowerer.rs  memory_pool.rs  module_cache.rs  network.rs  ops.rs  parallel_runner.rs  promotion.rs  proof_trace.rs  resolver.rs  rsi.rs  scale.rs  shader_attestation.rs  tensor.rs  training_gate.rs  value.rs  vm.rs
hlx-runtime/tests/: e2e_test.rs
hlx/.cargo/: config.toml
hlx/.claude/: ARCHITECTURAL_DECISIONS.md  HLX_DESIGN_SPEC.md  README.md  SESSION_BREADCRUMBS_TEMPLATE.md
hlx/autograph/: Cargo.toml
hlx/docs/: ADA_SPARK_FFI.md
hlx/examples/: ada_ffi_example.ada  axiom_test.lcc  bare_metal_test.hlxa  factorial.hlx  factorial.lcc  fibonacci.hlxa  fibonacci.lcc  fizzbuzz.hlxa  fizzbuzz.lcc  flow_test.hlx  gemini_softmax.hlxc  primes.hlxa  primes.lcc  showcase_math.hlxa  showcase_math.lcc  tensor_benchmark.hlx  test_aliasing.hlxa  test_complete_tensor.hlx  test_compound_assignment.hlxa  test_continue.hlx  test_else_if.hlxa  test_graphics.hlxa  test_graphics.lcc  test_logical_ops.hlx  test_precedence.hlx  test_recursion_depth.hlxa  test_recursion_exceed.hlxa  test_simple_math.lcc  test_stdlib.lcc  test_string_comparison.hlx  test_tensor.hlx  test_tensor.lcc  test_tier1_stdlib.hlx  test_tier2_stdlib.hlx
hlx/generated_aerospace/: module_000.hlx  module_001.hlx  module_002.hlx  module_003.hlx  module_004.hlx  module_005.hlx
hlx/hlx_backend_llvm/: Cargo.toml
hlx/hlx_bootstrap/: axiom_validators.hlx  builtins.hlx  builtins.hlxa  bytecode_v5.hlx  compiler.hlx  compiler.hlxa  emit.hlx  emit.hlxa  integration_test.hlxa  lexer.hlx  lexer.hlxa  lower.hlx  (+18 more)
hlx_core/: Cargo.toml
hlx_runtime/: Cargo.toml
(+551 files in other folders)
