[package]
name = "hlx-ffi"
version = "0.1.0"
edition = "2021"
description = "HLX Runtime — C ABI / FFI Layer"
license = "AGPL-3.0-only"

# Build as both a C shared library (.so/.dll) and a C static library (.a/.lib)
[lib]
name = "hlx"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
hlx-runtime = { path = "../hlx-runtime" }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
