[package]
name = "hlx-run"
version = "0.1.0"
edition = "2021"
description = "Execute HLX programs"

[[bin]]
name = "hlx-run"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ape = { path = "../ape" }
blake3 = "1.5"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }

[dependencies.hlx-runtime]
path = "../hlx-runtime"
