[package]
name = "hlx-runtime"
version = "0.1.2"
edition = "2021"
description = "HLX bytecode interpreter - runs LC-B bytecode"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
shellexpand = "3.1"

[dev-dependencies]
serial_test = "3.0"
