[package]
name = "hlx-runtime"
version = "0.1.2"
edition = "2021"
description = "HLX bytecode interpreter - runs LC-B bytecode"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
hound = "3.5"
shellexpand = "3.1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
axiom-lang = { path = "../axiom-hlx-stdlib", optional = true }

[features]
default = []
axiom = ["axiom-lang"]

[dev-dependencies]
serial_test = "3.0"
