[package]
name = "hlx_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deterministic runtime for HLX LC-B capsules"

[features]
default = ["cpu"]
cpu = ["ndarray"]
vulkan = ["ash", "gpu-allocator"]

[dependencies]
hlx_core = { path = "../hlx_core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
blake3.workspace = true
tracing.workspace = true
hex.workspace = true

# CPU backend
ndarray = { workspace = true, optional = true }

# Vulkan backend
ash = { workspace = true, optional = true }
gpu-allocator = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
