[workspace]
resolver = "2"
members = [
    "hlx_core",
    "hlx_compiler",
    "hlx_runtime",
    "hlx_cli", "hlx_backend_llvm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HLX Contributors"]
license = "Apache-2.0"
repository = "https://github.com/latentcollapse/hlx-compiler"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
hex = "0.4"
bytemuck = "1.14"

# Parsing
nom = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Numerics (CPU backend)
ndarray = "0.15"

# Vulkan (GPU backend)
ash = "0.37"
gpu-allocator = "0.25"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing & Benchmarks
criterion = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
