[package]
name = "axiom_py"
version = "0.2.0"
edition = "2021"
authors = ["Axiom Contributors"]
license = "Apache-2.0"
repository = "https://github.com/latentcollapse/Axiom"
description = "Python bindings for Axiom - a verification-first policy engine for AI agents"
keywords = ["python", "policy", "ai", "safety", "verification"]
categories = ["development-tools::ffi"]
readme = false

[lib]
name = "axiom_py"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py312"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
axiom-lang = { path = ".." }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
