[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "axiom-lang"
version = "0.2.0"
description = "Python bindings for Axiom - a verification-first policy engine for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Axiom Contributors" }]
keywords = ["policy", "ai", "safety", "verification", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/latentcollapse/Axiom"
Repository = "https://github.com/latentcollapse/Axiom"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "axiom.axiom_py"
