[package]
name = "hlx-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vulkan GPU backend for HLX - tensor operations"

[lib]
path = "mod.rs"

[dependencies]
vulkanalia = { version = "0.23", features = ["libloading", "window"] }
gpu-allocator = "0.27"
