[package]
name = "autograph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Visual workflow automation powered by HLX"

[dependencies]
hlx_core = { path = "../hlx_core" }
hlx_compiler = { path = "../hlx_compiler" }
hlx_runtime = { path = "../hlx_runtime" }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }