[package]
name = "hlx_backend_llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
hlx_core = { path = "../hlx_core" }
hlx_runtime = { path = "../hlx_runtime" }
anyhow = { workspace = true }
thiserror = { workspace = true }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
# Force dynamic linking for llvm-sys
llvm-sys = { version = "180", features = ["prefer-dynamic"] }
