[package]
name = "hlx_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for HLX compiler"

[[bin]]
name = "hlx"
path = "src/main.rs"

[dependencies]
hlx_core = { path = "../hlx_core" }
hlx_compiler = { path = "../hlx_compiler" }
hlx_runtime = { path = "../hlx_runtime" }
hlx_backend_llvm = { path = "../hlx_backend_llvm" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
sdl2 = "0.37"


anyhow.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
bincode.workspace = true
inferno = "0.11"  # Flamegraph generation
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
chrono = "0.4"  # Timestamps for flamegraph labels
