[package]
name = "hlx_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bijective compiler for HLX/HLXL → LC-B"

[dependencies]
hlx_core = { path = "../hlx_core" }
nom.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
