[package]
name = "hlx_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and IR for the HLX deterministic ML substrate"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
thiserror.workspace = true
hex.workspace = true
im = { version = "15.1", features = ["serde"] }
chrono = "0.4"

[dev-dependencies]
criterion.workspace = true
