[package]
name = "hlx_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Local dependencies
hlx_core = { path = "../hlx_core" }
hlx_compiler = { path = "../hlx_compiler" }
hlx_runtime = { path = "../hlx_runtime" }
hlx_backend_llvm = { path = "../hlx_backend_llvm" }
dashmap = "6.1.0"
regex = "1.10"
url = "2.5"
parking_lot = "0.12"

# Shader validation
rspirv = "0.12"
spirv = "0.3"
