[package]
name = "hlx_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deterministic runtime for HLX LC-B capsules"

[features]
default = ["cpu", "vulkan"]
cpu = ["ndarray"]
vulkan = ["ash", "gpu-allocator"]

[dependencies]
hlx_core = { path = "../hlx_core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
blake3.workspace = true
tracing.workspace = true
hex.workspace = true
bytemuck.workspace = true
im = { version = "15.1", features = ["serde"] }

# CPU backend
ndarray = { workspace = true, optional = true }

# Vulkan backend
ash = { workspace = true, optional = true }
gpu-allocator = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
