[package]
name = "hlx-codegen"
version = "0.1.0"
edition = "2021"
authors = ["HLX Contributors"]
description = "Enterprise-grade code generation tool for safety-critical systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hlx-lang/hlx"

[[bin]]
name = "hlx-codegen"
path = "src/main.rs"

[dependencies]
hlx_codegen = { path = "../../hlx_codegen" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
